2019-1/230/users/3425/executions/1576_1333.log
== SUBMITION (2019-03-11 16:55:10) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.149631
-- ERROR:
  File "/home/codebench/codes/1576/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 16:57:16) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 16:57:19) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10

print(expressao)
-- EXECUTION TIME:
0.191478
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
